fixed footer responsiveness and working on hamburger menu on mobile

--- a/frontend/stratagem/src/app/globals.css
+++ b/frontend/stratagem/src/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary: white;
-  --secondary: #324683;
+  --secondary: rgb(50, 70, 131);
   --green: #A4D141;
   --hero-button: #0FC5D3;
   --text-default:#000000CC;
